tests/negative/DuplicateFixity.mjuvix
module DuplicateFixity;


  infixl 3 +;

  infixl 3 +;
  axiom + : Type → Type → Type;
end;